--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   
   # 비밀번호 해싱
   crypto: ^3.0.3
+  intl: ^0.19.0
+  
+  # 커스텀 윈도우 타이틀바
+  bitsdojo_window: ^0.1.6
 
 dev_dependencies:
   flutter_test:
