--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,10 +48,12 @@ server {
         proxy_set_header Host $host;
     }
 
-    # 루트 경로 (API 문서 또는 기본 페이지)
+    # 웹 앱 정적 파일 서빙
+    # Flutter 웹 앱을 서빙합니다
     location / {
-        proxy_pass http://api/;
-        proxy_set_header Host $host;
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+        index index.html;
     }
 
     # 정적 파일 캐싱 (필요한 경우)
