--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,8 +71,8 @@ services:
     image: nginx:alpine # 경량 Nginx 이미지
     container_name: dora_nginx
     ports:
-      # 호스트의 80 포트를 컨테이너의 80 포트로 매핑
-      # 웹 브라우저에서 http://localhost로 접근 가능
+      # 호스트의 8080 포트를 컨테이너의 80 포트로 매핑
+      # 웹 브라우저에서 http://localhost:8080로 접근 가능
       - "80:80"
     volumes:
       # Nginx 설정 파일을 컨테이너에 마운트
