--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,8 @@ server {
     listen 80;
     
     # 서버 이름 (도메인 또는 IP)
-    server_name localhost;
+    # 모든 호스트에서 접근 가능하도록 설정
+    server_name _;
 
     # 클라이언트 요청 본문 최대 크기 (파일 업로드 등)
     client_max_body_size 10M;
@@ -35,6 +36,23 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CORS 헤더 추가 (Flutter 웹 앱에서 API 호출 시 필요)
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+        
+        # OPTIONS 요청 처리 (CORS preflight)
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
         
         # 타임아웃 설정
         proxy_connect_timeout 60s;
@@ -57,7 +75,8 @@ server {
     }
 
     # 정적 파일 캐싱 (필요한 경우)
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|json|woff|woff2|ttf|eot|svg)$ {
+        root /usr/share/nginx/html;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
