feat: enhance dark mode support across login, register screens, and glass container widget

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,9 @@ server {
     # /api로 시작하는 모든 요청을 FastAPI 서버로 전달합니다
     location /api {
         # 프록시 설정
-        proxy_pass http://api;
+        # trailing slash를 추가하여 307 리다이렉트 방지
+        proxy_pass http://api/api;
+        proxy_redirect off;
         
         # 요청 헤더 설정
         proxy_set_header Host $host;
