--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       retries: 5
     networks:
       - dora_network
+    restart: always
 
   # FastAPI 백엔드 서비스
   api:
@@ -65,6 +66,7 @@ services:
       "
     networks:
       - dora_network
+    restart: always
 
   # Nginx 리버스 프록시 서비스
   nginx:
@@ -85,6 +87,7 @@ services:
       - api
     networks:
       - dora_network
+    restart: always
 
 # 네트워크 정의
 # 모든 서비스가 같은 네트워크에 있어서 서비스 이름으로 통신 가능
