--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,6 +25,23 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
+    # WebSocket 요청을 FastAPI로 프록시
+    location /api/ws {
+        proxy_pass http://api/api/ws;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket 타임아웃 설정 (연결 유지)
+        proxy_connect_timeout 7d;
+        proxy_send_timeout 7d;
+        proxy_read_timeout 7d;
+    }
+
     # API 요청을 FastAPI로 프록시
     # /api로 시작하는 모든 요청을 FastAPI 서버로 전달합니다
     location /api {
